# ZK-PlagiarismDetector

./: README.md
Nodejs-Server/: package-lock.json  package.json  server.js
backend/: main.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ConnectWallet.jsx  Context.jsx
hardhat/: hardhat.config.js
hardhat/contracts/: zkverification.sol
hardhat/scripts/: deploy.js
hardhat/src/@openzeppelin/contracts/interfaces/draft-IERC6093.sol/: IERC1155Errors.dbg.json
hardhat/src/@openzeppelin/contracts/token/ERC721/utils/ERC721Utils.sol/: ERC721Utils.dbg.json
hardhat/src/@openzeppelin/contracts/utils/math/SafeCast.sol/: SafeCast.dbg.json
hardhat/src/contracts/zkverification.sol/: ZkVerification.dbg.json  ZkVerification.json
zkvm/hasher/: proof.json  proof.txt
zkvm/hasher/host/: Cargo.toml
zkvm/hasher/host/src/: main.rs
zkvm/hasher/methods/guest/: Cargo.toml
zkvm/hasher/methods/guest/src/: main.rs
